# quite-baduk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  backup.sh  docker-compose.yml  start.sh  stop.sh
backend/: .coverage  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: client_ip.py  config.py  db.py  deps.py  engine_pool.py  errors.py  last_seen_cache.py  main.py  rate_limit.py  security.py  session_purge.py  session_registry.py
backend/app/api/: admin.py  admin_pro.py  analysis.py  auth.py  daily.py  games.py  health.py  session.py  spectate.py  spectate_pro.py  stats.py  ws.py
backend/app/core/: nickname.py
backend/app/middleware/: security_headers.py
backend/app/models/: __init__.py  analysis_cache.py  game.py  move.py  pro_game.py  session.py  session_history.py  user.py
backend/app/schemas/: auth.py  datetime_utc.py  game.py  session.py  ws.py
backend/app/services/: daily_challenge.py  game_service.py  (+2 more)
backend/deploy/: README.md  cloudflared.yml  com.baduk.api.plist  harden_macos.sh  r2_backup.sh  run_local_prod.sh
backend/katago/: README.md  build_macos.sh  config.cfg  download_model.sh
backend/migrations/: env.py
backend/scripts/: extract_world_finals.py  generate_brand_icons.py  ingest_cwi_weekly.py  ingest_gogameguru.py  seed_pro_games.py
backend/tests/: conftest.py  test_client_ip.py  test_db_helpers.py  test_game_service_helpers.py  test_health.py  test_last_seen_cache.py  test_models.py  test_nickname.py  test_nickname_registry.py  test_session_purge.py  test_ws_schemas.py
(+508 files in other folders)
